--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Team-Docker-Divers/Reviews/issues"
   },
-  "homepage": "https://github.com/Team-Docker-Divers/Reviews#readme"
+  "homepage": "https://github.com/Team-Docker-Divers/Reviews#readme",
+  "dependencies": {
+    "pg": "^8.6.0"
+  }
 }
