--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sytem Design Capstone, Reviews widget",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start": "nodemon server/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,10 @@
   },
   "homepage": "https://github.com/Team-Docker-Divers/Reviews#readme",
   "dependencies": {
+    "nodemon": "^2.0.7",
     "pg": "^8.6.0"
+  },
+  "devDependencies": {
+    "express": "^4.17.1"
   }
 }
