--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Team-Docker-Divers/Reviews#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0"
   },
